# laz-perf

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  Vagrantfile  appveyor.yml  cleanup.sh  download-test-sets.sh  emscripten-build.sh  hobu-config.bat  lazperf-config.cmake.in  pyproject.toml  python-wheel-build.sh  setup.py
.github/workflows/: ccpp.yml  js.yml
benchmarks/: CMakeLists.txt  brute  brute.cpp  brute_point10  brute_point10.cpp  laszip.cpp
cmake/: common.cmake  compiler_options.cmake  directories.cmake  emscripten_compiler_options.cmake  functions.cmake  install.cmake  lazperf-config.cmake  lazperf_base.in  static_compiler_options.cmake  toolchain-emscripten.cmake  unix_compiler_options.cmake  win32_compiler_options.cmake
common/: common.hpp  types.hpp
cpp/: CMakeLists.txt  download-test-sets.sh  emscripten-build.sh  lazperf-configVersion.cmake.in
cpp/benchmarks/: CMakeLists.txt  brute.cpp  brute_point10.cpp  laszip.cpp
cpp/emscripten/: CMakeLists.txt  index-comp.html  index.html  laz-perf.cpp  point10.las.laz  run-server.sh
cpp/examples/: CMakeLists.txt  dynamic.cpp  point10.cpp  readlaz.cpp  simple.cpp
cpp/laz-perf/: CMakeLists.txt  compressor.hpp  decoder.hpp  decompressor.hpp  eb_vlr.hpp  encoder.hpp  excepts.hpp  factory.hpp  filestream.cpp  filestream.hpp  formats.hpp  interface.cpp  interface.hpp  io.cpp  io.hpp  las.hpp  laz_vlr.hpp  lazperf.cpp  lazperf.hpp  main.cpp  model.hpp  streams.hpp  types.hpp  util.hpp  utils.hpp  version.hpp  vlr.cpp  vlr.hpp
cpp/laz-perf/common/: types.hpp
cpp/laz-perf/detail/: field_byte14.cpp  field_byte14.hpp  field_extrabytes.hpp  field_gpstime10.cpp  field_nir14.cpp  field_nir14.hpp  field_point10.cpp  field_point10.hpp  field_point14.cpp  field_point14.hpp  field_rgb10.cpp  field_rgb14.cpp  field_rgb14.hpp
cpp/lazperf/: CMakeLists.txt  Extractor.hpp  Inserter.hpp  compressor.hpp  filestream.cpp  header.cpp  header.hpp  io.cpp  io.hpp  io_private.hpp  laz_vlr.hpp  lazperf.cpp  lazperf.hpp  lazperf_base.hpp  portable_endian.hpp  readers.cpp  readers.hpp  readers_private.hpp  vlr.cpp  vlr.hpp  writers.cpp  writers.hpp  writers_private.hpp
cpp/support/: brute_point10.html
cpp/test/: CMakeLists.txt  Charbuf.cpp  Charbuf.hpp  io_tests.cpp  lazperf_tests.cpp  reader.hpp  stream_tests.cpp  test.zsh  test_main.hpp.in
cpp/test/gtest/gtest-08-11-21/: CMakeLists.txt
cpp/test/gtest/gtest-10-06-21/: CMakeLists.txt
cpp/test/raw-sets/: classification.txt  no-points-1.3.las  no-points-1.3.laz  point-color-time.las  point-color-time.las.laz  point-color.las  point-color.las.laz  point-time-1.4.las.laz  point10-1.0.las  point10-1.0.laz  point10-1.1.las  point10-1.1.laz  point10-1.las.raw  rand1_6.las
cpp/tools/: CMakeLists.txt  random.cpp
debian/: README.Debian  changelog  control  copyright  gbp.conf  rules
emscripten/: CMakeLists.txt  index.html  laz-perf-test.html  laz-perf.cpp
examples/: CMakeLists.txt  dynamic.cpp  point10.cpp  readlaz.cpp  simple.cpp
js/: .gitignore  .npmignore  .prettierignore  bundle.sh  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.production.json  wasm.sh
js/src/: index.ts  laz-perf.d.ts  laz-perf.js  laz-perf.wasm
js/src/test/: chunk.test.ts  file.test.ts  utils.ts
laz-perf/: compressor.hpp  decoder.hpp  eb_vlr.hpp  encoder.hpp  factory.hpp  formats.hpp  io.hpp  las.hpp  laz_vlr.hpp  main.cpp  portable_endian.hpp  streams.hpp  util.hpp  vlr.hpp
laz-perf/common/: types.hpp
laz-perf/detail/: field_byte14.hpp  field_extrabytes.hpp  field_gpstime.hpp  field_nir14.hpp  field_point10.hpp  field_point14.hpp  field_rgb.hpp  field_rgb14.hpp  field_xyz.hpp
python/: CHANGES.rst  MANIFEST.in  laz-perf  pyproject.toml  setup.cfg  setup.py
python/ci/: build-wheel-linux.sh
python/lazperf/: PyLazperf.cpp  PyLazperf.hpp  PyLazperfTypes.hpp  PyVlrCompressor.cpp  __init__.py  lazperf.pxd  pylazperfapi.pyx
python/test/: __init__.py  simple.laz  test_decompressor.py  test_lazperf.py  test_lazperf_extrabytes.py  test_lazperf_vlr.py  test_vlr_decomp.py
scripts/ci/: laszip.sh  liblas.sh  pre.sh  run.sh
scripts/ci/appveyor/: config.cmd
support/: index.html
test/: CMakeLists.txt  io_tests.cpp  lazperf_tests.cpp  reader.hpp  stream_tests.cpp  test_main.cpp  test_main.hpp  test_main.hpp.in  tlaz_tests.cpp
test/raw-sets/: 1815.las  1815.laz  classification.laz  extrabytes.las  point-time.las  point-time.las.laz  point10-1.las.laz.raw  point10.las
tlaz/: Makefile  compressor.hpp  decoder.hpp  decompressor.hpp  encoder.hpp  excepts.hpp  factory.hpp  formats.hpp  io.hpp  las.hpp  main.cpp  model.hpp  streams.hpp  util.hpp  zipper.hpp
tlaz/common/: types.hpp
tlaz/detail/: field_gpstime.hpp  field_point10.hpp  field_rgb.hpp  field_xyz.hpp
tools/: CMakeLists.txt  random.cpp
